<resources>
    <string name="app_name">Healer</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_btn_login">Log In</string>
    <string name="login_btn_register">No account? REGISTER here!</string>
    <string name="register_name">Name</string>
    <string name="register_age">Age</string>
    <string name="register_district">District</string>
    <string name="register_contact">Contact Number</string>
    <string name="register_blood_group">Blood Group</string>
    <string name="register_gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_btn_register">Register</string>
    <string name="register_btn_login">Already registered? LOG IN here!</string>
    <string name="label_register">Create Account</string>
    <string name="drawerLogoContent">drawer logo</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="naveen_cooray">Naveen Cooray</string>
    <string name="home">Home</string>
    <string name="my_requests">My Requests</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="important_info">Important Info</string>
    <string name="preferences">Preferences</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="info">Additional Info</string>
    <string name="about_developer">About Developer</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="requests">Requests</string>
    <string name="empty_field">Required</string>
    <string name="mismatch">Passwords are not matching</string>
    <string name="distric_required">Distric should be selected</string>
    <string name="gender_required">Gender field is required</string>
    <string name="bg_required">Blood group should be selected</string>
    <string name="hello_superhero">Hello,</string>
    <string name="db_lives_saved">Lives Saved</string>
    <string name="db_times_donated">Times Donated</string>
    <string name="via_jeeva">via</string>
    <string name="db_donations_today">Donations Today</string>
    <string name="db_btn_see_requests">See Requests</string>
    <string name="content">content description</string>
    <string name="offline_login">Device is offline</string>
    <string name="rc_district">District</string>
    <string name="rc_contact">Contact</string>
    <string name="blood_needed">Blood Needed</string>
    <string name="call_now">Call Now</string>
    <string name="details_of_blood_recipient">Details of the Blood Recipient</string>
    <string name="new_post_priority">Priority</string>
    <string name="new_post_message_optional">Message (Optional)</string>
    <string name="new_post_message_hint">Limit to 60 characters or less</string>
    <string name="new_post_posted_by">Posted By</string>
    <string name="new_post_relationship">Relationship</string>
    <string name="tv_rp_message">Message</string>
    <string name="tv_rp_date">Date</string>
    <string name="i_am_a_donor">I am a Donor</string>
    <string name="notify_my_blood_group_only">Send me notifications related to all blood groups</string>
    <string name="accept_terms_conditions">I accept Terms and Conditions of the Service</string>
    <string name="responses">Responses</string>
    <string name="date_posted">Date Posted</string>
    <string name="posted_by">Posted By</string>
    <string name="accept">Accept</string>
    <string name="blood_urgent">Blood needed within 2 days !</string>
    <string name="blood_somewhat_urgent">Blood needed within 7 days !</string>
    <string name="blood_not_urgent">Blood needed within 1 month !</string>
    <string name="accept_request">You have successfully accepted the donation request !</string>
    <string name="accept_request_unsuccess">There was a problem trying to accept this request. Please try again !</string>
    <string name="accepted">Accepted</string>
    <string name="btn_reject">Reject</string>
    <string name="not_accepted">Not Accepted</string>
    <string name="reject_request">You have rejected the request !</string>
    <string name="rejected">Rejected</string>

    <string-array name="langs">
        <item>Choose Language</item>
        <item>English</item>
        <item>Sinhala</item>
    </string-array>

    <string-array name="districts">
        <item>Select District</item>
        <item>Ampara</item>
        <item>Anuradhapura</item>
        <item>Badulla</item>
        <item>Batticaloa</item>
        <item>Colombo</item>
        <item>Galle</item>
        <item>Gampaha</item>
        <item>Hambanthota</item>
        <item>Jaffna</item>
        <item>Kalutara</item>
        <item>Kandy</item>
        <item>Kegalle</item>
        <item>Kilinochchi</item>
        <item>Kurunegala</item>
        <item>Mannar</item>
        <item>Matale</item>
        <item>Matara</item>
        <item>Monaragala</item>
        <item>Mullaitivu</item>
        <item>Nuwara Eliya</item>
        <item>Polonnaruwa</item>
        <item>Puttalama</item>
        <item>Ratnapura</item>
        <item>Trincomalee</item>
        <item>Vavuniya</item>
    </string-array>

    <string-array name="blood_groups">
        <item>Select Blood Group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <string-array name="blood_groups2">
        <item>Search People By Blood Group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <string-array name="relationships">
        <item>Select Relationship</item>
        <item>Father</item>
        <item>Mother</item>
        <item>Sister</item>
        <item>Brother</item>
        <item>Daughter</item>
        <item>Son</item>
        <item>Other Relative</item>
        <item>Friend</item>
        <item>Acquaintance</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="db_btn_see_nearbyUsers">Nearby Donors</string>
    <string name="language">Language</string>
    <string name="sinhala">Sinhala</string>
    <string name="choose_the_display_language">Choose the display language</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="make_changes_to_initially_created_profile">Make changes to initially created profile</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="english">English</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_activities">MyActivities</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="my_responses">My Responses</string>


    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="msg_subscribe_failed">Failed to subscribe to news topic</string>
    <string name="google_map_error">There is a problem connecting to Google Maps!</string>
    <string name="location_not_found">Current location not found</string>
    <string name="get_gps">You need to enable GPS to use this service!</string>
    <string name="turn_gps_on">Please turn on GPS to use this service.</string>
    <string name="living_town">Nearest Town</string>
    <string name="donorSwitch">You are now a blood donor</string>
    <string name="notADonorSwitch">You are not a blood donor anymore</string>
    <string name="noitfySwitch">You have activated notifications.</string>
    <string name="offNotifications">You have deactivated notifications</string>
    <string name="save">Save</string>

</resources>
